<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectText"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.096"
        tools:text="@string/SelectText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="generateButton"
        android:text="@string/GenerateColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/Number"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="116dp"
        android:layout_height="41dp"
        android:text="@string/NumberAttempts"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.907" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="157dp"
        android:layout_height="23dp"
        android:text="@string/ColorDisplayText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginEnd="4dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/ColorD"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.394" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/ColorA"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.405" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/ColorB"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.405" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:background="?attr/colorButtonNormal"
        android:text="@string/ColorC"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.405" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/ColorChoices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="58dp"
        android:layout_height="29dp"
        android:onClick="checkButtonB"
        android:text="@string/CheckB"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.449" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="58dp"
        android:layout_height="29dp"
        android:layout_marginStart="88dp"
        android:checked="false"
        android:onClick="checkButtonA"
        android:text="@string/CheckA"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.459" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="58dp"
        android:layout_height="29dp"
        android:onClick="checkButtonD"
        android:text="@string/CheckD"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/checkBox4"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.448" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="58dp"
        android:layout_height="29dp"
        android:onClick="checkButtonC"
        android:text="@string/CheckC"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.449" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="89dp"
        android:layout_height="73dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="checkButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.494"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="133dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:checked="false"
            android:enabled="false"
            android:onClick="radioRedOnChecked"
            android:text="@string/ButtonRed"
            android:textAlignment="textStart"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:enabled="false"
            android:onClick="radioGreenOnChecked"
            android:text="@string/ButtonGreen"
            android:textAlignment="textStart"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:enabled="false"
            android:onClick="radioBlueOnChecked"
            android:text="@string/ButtonBlue"
            android:textAlignment="textStart"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:enabled="false"
            android:onClick="radioYellowOnChecked"
            android:text="@string/ButtonYellow"
            android:textAlignment="textStart"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:enabled="false"
            android:onClick="radioCyanOnChecked"
            android:text="@string/ButtonCyan"
            android:textAlignment="textStart"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:enabled="false"
            android:onClick="radioMagentaOnChecked"
            android:text="@string/ButtonMagenta"
            android:textAlignment="textStart"
            android:visibility="visible" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>