<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:onClick="returnOnClick"
        android:text="@string/Dismiss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:layout_constraintVertical_bias="0.809" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/textResult"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/fullyCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/wrongPosition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="416dp"
        android:layout_height="56dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="95dp"
            android:layout_height="55dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:background="?attr/colorButtonNormal"
            android:text="@string/resultD"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="95dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="?attr/colorButtonNormal"
            android:text="@string/resultC"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="95dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="24dp"
            android:layout_weight="1"
            android:background="?attr/colorButtonNormal"
            android:text="@string/resultB"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="95dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="?attr/colorButtonNormal"
            android:text="@string/resultA"
            android:textAlignment="center"
            android:textSize="36sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>